--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 
 dependencies:
   args: ^2.3.1
-  cli_menu: ^0.3.0-nullsafety.0
+  cli_menu: ^0.4.0+1
   mason_logger: ^0.2.6
-  pub_updater: ^0.3.0
+  pub_updater: ^0.5.0
   yaml: ^3.1.1
 
 dev_dependencies:
